--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
       <div class="grid-item black low-bottom"></div>
     </div>
   </div>
+    <footer>
+    <p>Created by Yash Halgaonkar</p>
+  </footer>
 </body>
 
 </html>
